# MagicCursor

./: .babelrc  .eslintrc.json  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.cjs  webpack.safari.config.cjs
.github/workflows/: build.yml
safari/: manifest.json
source/: manifest.json  manifest.safari.json
source/ContentScript/: index.tsx
source/ContentScript/effects/: ParticleEffect.tsx  types.ts
source/Popup/: Popup.tsx  styles.scss
source/styles/: global.scss
source/utils/: storage.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MagicMouse.vue
