[package]
name = "magic-cursor"
version = "1.0.0"
description = "Beautiful GPU-accelerated fluid trail that follows your mouse"
authors = ["Magic Cursor Team"]
license = "MIT"
edition = "2021"
repository = "https://github.com/magic-cursor/magic-cursor"

[lib]
name = "magic_cursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
